-Changed Command infrastructure from string based to List<String> based and use ProcessBuilder instead of Runtime.exec. This is to accomodate spaces in file paths (both Unix and Windows). The parser with escaping and quoting is not yet done. -Fixed bug in startup sequence where chmod happens after download. Now everything should be in-sequence.